# call-tracker

./: CONTEXT.md  LEARNINGS.md  README.md  index.html  package-lock.json  package.json  start.bat  tests.html  validate.js  vercel.json
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: main.rs
